--- a/src/options/options.css
+++ b/src/options/options.css
@@ -27,9 +27,10 @@ body {
 }
 
 .options-logo {
-  width: 40px;
-  height: 40px;
+  width: 44px;
+  height: 44px;
   object-fit: contain;
+  display: block;
 }
 
 .options-title {
