--- a/src/popup/popup.css
+++ b/src/popup/popup.css
@@ -31,9 +31,10 @@ body {
 }
 
 .popup-logo {
-  width: 32px;
-  height: 32px;
+  width: 34px;
+  height: 34px;
   object-fit: contain;
+  display: block;
 }
 
 .popup-name {
